--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -13,51 +13,53 @@
 
 <body>
     <body>
-        <header id="main-header" class="alt">
-            <div class= "container">
-                <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-            </div>
-            <div class = "logos">
-                <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-                <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-        </div>
-        </header>
+        <div class="wrapper">
+            <header id="main-header" class="alt">
+                <div class= "container">
+                    <h1><strong>Vishakaa Satheeshkumar</strong></h1>
+                </div>
+                
+                <div class = "logos">
+                    <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
+                    <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+                    <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                </div>
+            </header>
 
-        <nav id=menu>
-            <div class = "container">
-                <ul class=links>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                </ul>
-            </div>
-        </nav>
+            <nav id=menu>
+                <div class = "container">
+                    <ul class=links>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                    </ul>
+                </div>
+            </nav>
 
         <section>
             <div class="container">
-                <h2>Reverse Engineering: Pill Buzz</h2>
+                <h2>Pill Buzz</h2>
             </div>
                 <article id="col-2">
                     <div class="container">
-                        I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.
-                        As humans age, we become weaker and more susceptible to various illnesses, which is one of the reasons why we are prescribed to take scheduled medications.
-                        These are not only to help with disorders that one is affected by, but simply to sustain their health, such as taking vitamins. <br><br>
-                        An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer) and visible (light) features to notify the user when to take the pill. 
-                        From being programmed with an automated 24-hour pill dispensary, it allows easier management of the medications. 
-                        Additionally, the device is connected to a landline that sends alerts and messages regarding the intake of the medication to the caregiver. 
-                        This simple device is to be powered with a watch battery and to preserve battery life, it can be operated using the equipped solar cell.  <br><br>
-                        The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design. <br><br>
-                        <strong>Our group received 97% on the final project.</strong>
+                        <p> 
+                            I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.
+                            An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill. 
+                            The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design. <br><br>
+                            <em>Our group received 97% on the final project.</em>
+                        </p>
                     </div>
                 </article>
 
+               <!--
                 <aside id="sidebar">
                 </aside>
+               -->
         </section>
 
         <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
+        </div>
     </body>
 </html>
