--- a/aod.html
+++ b/aod.html
@@ -14,41 +14,44 @@
 <body>
     <div class="wrapper">
         <header id="main-header" class="alt">
-            <div class= "container">
+            <!--<div class= "container">-->
                 <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-            </div>
+            <!--</div>-->
+
             <div class = "logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
                 <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-        </div>
+            </div>
         </header>
 
         <nav id=menu>
-            <div class = "container">
+            <!--<div class = "container">-->
                 <ul class=links>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
-            </div>
+            <!--</div>-->
         </nav>
+<!--Main Area of the Page-->
+    
+        <main>
+            <section>
+                <!--<div class="container">-->
+                <!--</div>-->
 
-        <section>
-            <div class="container">
-                <h2>Accessibility on Demand</h2>
-            </div>
-                <article id="text">
-                    <div class="container">
-                    <p>
-                        I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities. 
-                        We represented Accessibility on Demand, a design firm, who implements accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act and drive Ontario to a barrier-free zone.
-                        The user design, ethical, political, cultural, and business impacts were thoroughly researched to reach the final design. <br><br>
-                        <em>Our final RFP was selected for an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em>
-                    </p>
-                </div>
+                <article>
+                <!--<div class="container">-->
+                    <h2>Accessibility on Demand</h2>
+                    <p> I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities.</p>
+                    <p>We represented Accessibility on Demand, a design firm, that advocates and incorporates vital accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario to a barrier-free zone.</p>
+                    <p>The user/design, ethical, political, cultural, and business impacts along with the final work plan were thoroughly researched to reach the final design.</p>
+                    <p><em>Our final RFP was selected to be incorporated into an ongoing accessible classroom plan within Ryerson's Centre for Excellence in Teaching and Learning.</em></p>
+                <!--</div>-->
                 </article>
-        </section>
+            </section>
+        </main>
 
         <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
