--- a/projects.html
+++ b/projects.html
@@ -12,49 +12,49 @@
     </head>
 
 <body>
-
-    <header id="main-header" class="alt">
-        <div class="wrapper">
-            <div class= "container">
+    <div class="wrapper">
+        <header id="main-header" class="alt">
+            <!--<div class= "container">-->
                 <h1><strong>Vishakaa Satheeshkumar</strong></h1>
+            <!--</div>-->
+
+            <div class="logos">
+                <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
+                <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
+        </header>
 
-        <div class="logos">
-            <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-            <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-            <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-        </div>
-    </header>
-
-    <nav id="menu">
-        <div class="container">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li class="current"><a href="projects.html">Projects</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav id="menu">
+            <!--<div class="container">-->
+                <ul class="links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li class="current"><a href="projects.html">Projects</a></li>
+                </ul>
+            <!--</div>-->
+        </nav>
 
 <!--Main Area of the Page-->
-<section>
-    <div class="container">
-        <article id="item">
-            <h2>Projects</h2>
-            <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
-            <small>January to April 2020</small>
-            <h4><a href="pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
-            <small>September to December 2018</small>
-            <!--<h4><a href="../projects/cross.html">Cross-Curricular: Electrolysis of Water for Hydrogen Fuel Cells</a></h4>
-            <small>January to April 2018</small>-->
-        </article>
-    </div>
-</section>
+        <main>
+            <section>
+                <!--<div class="container">-->
+                    <article id="item">
+                        <h2>Projects</h2>
+                        <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
+                            <small>January to April 2020</small>
+                        <h4><a href="pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
+                            <small>September to December 2018</small>
+                    <!--<h4><a href="../projects/cross.html">Cross-Curricular: Electrolysis of Water for Hydrogen Fuel Cells</a></h4>
+                            <small>January to April 2018</small>-->
+                    </article>
+                <!--</div>-->
+            </section>    
+        </main>
 
-<footer>
-    <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-</footer>
+        <footer>
+            <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
+        </footer>
     </div>
-
 </body>
 </html>
