--- a/projects.html
+++ b/projects.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name= "description" content= "Check out my projects:">
-        <meta name= "keywords" content= "blogs, engineering, student">
+        <meta name= "description" content= "Check out my blogs:">
+        <meta name= "keywords" content= "blogs, engineering, student, sales">
         <meta name="author" content="Vishakaa Satheeshkumar">
-        <title>Vishakaa S | Projects</title>
+        <title>Vishakaa S | About Me</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style2.css">
@@ -14,10 +14,10 @@
 <body>
     <div class="wrapper">
         <header id="main-header" class="alt">
-            <!--<div class= "container">-->
-                <h1><strong>Vishakaa Satheeshkumar</strong></h1>
+            <!--<div class="container">-->
+                <h1>Vishakaa Satheeshkumar</h1>
             <!--</div>-->
-
+            
             <div class="logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
@@ -29,8 +29,8 @@
             <!--<div class="container">-->
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li class="current"><a href="projects.html">Projects</a></li>
+                    <li class="currrent"><a href="about.html">About Me</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                 </ul>
             <!--</div>-->
         </nav>
@@ -39,14 +39,13 @@
         <main>
             <section>
                 <!--<div class="container">-->
-                    <article id="item">
-                        <h2>Projects</h2>
-                        <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
-                            <small>January to April 2020</small>
-                        <h4><a href="pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
-                            <small>September to December 2018</small>
-                    <!--<h4><a href="../projects/cross.html">Cross-Curricular: Electrolysis of Water for Hydrogen Fuel Cells</a></h4>
-                            <small>January to April 2018</small>-->
+                    <article id="description">
+                        <h2>About Me</h2>
+                            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
+                            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
+                            <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
+                            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
+                            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
                     </article>
                 <!--</div>-->
             </section>    
@@ -55,6 +54,6 @@
         <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
-    </div>
+    </div>  
 </body>
 </html>
