--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -12,54 +12,52 @@
     </head>
 
 <body>
-    <body>
-        <div class="wrapper">
-            <header id="main-header" class="alt">
-                <div class= "container">
-                    <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-                </div>
+    <div class="wrapper">
+        <header id="main-header" class="alt">
+            <!--<div class= "container">-->
+                <h1><strong>Vishakaa Satheeshkumar</strong></h1>
+            <!--</div>-->
                 
-                <div class = "logos">
-                    <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
-                    <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                    <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
-                </div>
-            </header>
+            <div class = "logos">
+                <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
+                <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
+                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+            </div>
+        </header>
 
-            <nav id=menu>
-                <div class = "container">
+        <nav id=menu>
+            <!--<div class = "container">-->
                     <ul class=links>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
-                </div>
+                <!--</div>-->
             </nav>
-
-        <section>
-            <div class="container">
-                <h2>Pill Buzz</h2>
-            </div>
-                <article id="col-2">
-                    <div class="container">
-                        <p> 
-                            I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.
-                            An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill. 
-                            The bill of materials, evaluation, and redesign scheme were thoroughly researched to decide upon the final design. <br><br>
-                            <em>Our group received 97% on the final project.</em>
-                        </p>
-                    </div>
-                </article>
-
-               <!--
-                <aside id="sidebar">
-                </aside>
-               -->
-        </section>
+<!--Main Area of the Page-->
+        <main>
+            <section>
+                <!--<div class="container">-->
+                <!--</div>-->
+                    <article>
+                        <h2>Pill Buzz</h2>
+                        <!--<div class="container">-->
+                            <p> I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.</p>
+                            <p>An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill.</p>
+                            <p>The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design.</p>
+                            <p><em>Our group received 97% on the final project.</em></p>
+                        <!--</div>-->
+                    </article>
+                   <!--
+                    <aside id="sidebar">
+                    </aside>
+                   -->
+            </section>    
+        </main>   
 
         <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
-        </div>
-    </body>
+    </div>
+</body>
 </html>
