--- a/about.html
+++ b/about.html
@@ -12,47 +12,48 @@
     </head>
 
 <body>
-
-    <header id="main-header" class="alt">
-        <div class="wrapper">
-            <div class="container">
+    <div class="wrapper">
+        <header id="main-header" class="alt">
+            <!--<div class="container">-->
                 <h1>Vishakaa Satheeshkumar</h1>
-            </div>
+            <!--</div>-->
             
             <div class="logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
                 <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
-    </header>
+        </header>
 
-    <nav id="menu">
-        <div class="container">
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li class="currrent"><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav id="menu">
+            <!--<div class="container">-->
+                <ul class="links">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="currrent"><a href="about.html">About Me</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                </ul>
+            <!--</div>-->
+        </nav>
 
 <!--Main Area of the Page-->
-<section>
-    <div class="container">
-        <article id="description">
-            <h2>About Me</h2>
-            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
-            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>  
-            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
-            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
-        </article>
-    </div>
-</section>
+        <main>
+            <section>
+                <!--<div class="container">-->
+                    <article id="description">
+                        <h2>About Me</h2>
+                            <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
+                            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
+                            <p>Before I head off into my third year, I've decided to self-learn how to program my very own personal website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>       
+                            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
+                            <p>If you find that my qualifications meet your requirements for an available position, send me a message via LinkedIn! 📨</p>
+                    </article>
+                <!--</div>-->
+            </section>    
+        </main>
 
-<footer>
-    <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-</footer>
+        <footer>
+            <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
+        </footer>
     </div>  
-
 </body>
 </html>
