--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -14,9 +14,7 @@
 <body>
     <div class="wrapper">
         <header id="main-header" class="alt">
-            <!--<div class= "container">-->
                 <h1><strong>Vishakaa Satheeshkumar</strong></h1>
-            <!--</div>-->
                 
             <div class = "logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
@@ -26,32 +24,26 @@
         </header>
 
         <nav id=menu>
-            <!--<div class = "container">-->
                     <ul class=links>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
-                <!--</div>-->
             </nav>
 <!--Main Area of the Page-->
         <main>
             <section>
-                <!--<div class="container">-->
-                <!--</div>-->
                     <article>
                         <h2>Pill Buzz</h2>
-                        <!--<div class="container">-->
                             <p> I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.</p>
                             <p>An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill.</p>
+                            <div class="container">
+                                <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
+                                <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
+                            </div>
                             <p>The bill of materials, evaluation (durability, sustainability, user experience, performance, profitability, affordability & accessibility, and public good), and redesign (method, cost, portability, range of use, simplicity, power consumption, and marketing) were thoroughly researched to decide upon the final design.</p>
                             <p><em>Our group received 97% on the final project.</em></p>
-                        <!--</div>-->
                     </article>
-                   <!--
-                    <aside id="sidebar">
-                    </aside>
-                   -->
             </section>    
         </main>   
 
