--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Before I head off into my third year, I've decided to self-learn how to program my very own website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>
-                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
-                            <p>Below is a summary of relevent engineering courses, certifications, and technical areas that I excel in, which is frequently updated, as I'm <em>constantly</em> looking for ways to better myself:</p>
+                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management 💡</strong></p>
+                            <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequrently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, and Organic Chemistry<br>
-                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
+                            <strong>Software:</strong> Microsoft Office Suit (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
                             <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
@@ -51,7 +51,7 @@
             </section>    
         </main>
 
-        <footer>
+        <footer class="push">
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>  
